# Begginner-exercises

./: Beginner Exercises - C++ Forum.html  README.md
01_Grade Program/: Grade Program.cbp  Grade Program.depend  Grade Program.layout  UX.cpp  UX.hpp  main.cpp
02_Cola Machine/: main_alt.cpp
03_While(User == Guillible)/: main.cpp
04_Pancake Glutton/: 04_Pancake Glutton.layout  glutton.hpp  people_data.list
05_Bracketing Search/: computer_turn.cpp
06_Tic Tac Toe/: 06_Tic Tac Toe.cbp  06_Tic Tac Toe.depend  06_Tic Tac Toe.layout  IA_TTT.cpp  Tic_Tac_Toe.cpp  Tic_Tac_Toe.hpp  generic.cpp  generic.hpp  main(stable).cpp  main.cpp  main2-0.cpp
07_Dungeon Crawler/: 07_Dungeon Crawler.cbp  07_Dungeon Crawler.depend  07_Dungeon Crawler.layout  Doc.txt  Dungeon.cpp  Dungeon.hpp  Entity.hpp  Output.txt  description.txt  generic.cpp  generic.hpp  main.cpp  main0-1.cpp  version_doc.txt
08_Fun With Functions/: main.cpp
09_Strings are Your Friends, Until they Betray you/: main.cpp
C++_basics/01_Grade Program/: CMakeLists.txt
C++_basics/02_Cola Machine/: main.cpp
C++_basics/04_Pancake Glutton/: 04_Pancake Glutton.cbp  04_Pancake Glutton.depend  glutton.cpp  main.cpp
C++_basics/05_Bracketing Search/: player_turn.cpp
C++_basics/06_Tic Tac Toe/: CMakeLists.txt  IA_TTT.hpp  generic.cpp
C++_basics/07_Dungeon Crawler/: 07_Dungeon Crawler.depend  Doc.txt  Dungeon.cpp  main.cpp
cmake/: CMAKE_HOWTO.txt  README.md
cmake/Step1/: CMakeLists.txt
cmake/Step1/MathFunctions/: CMakeLists.txt
cmake/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
cmake/Step2/: Exercise0.cmake  Exercise1.cmake  Exercise2.cmake  Exercise3.cmake
cmake/Step3/: CMakeLists.txt  CMakePresets.json
cmake/Step3/MathFunctions/: MathFunctions.cxx
cmake/Step3/Tutorial/: Tutorial.cxx
cmake/Step4/: CMakeLists.txt  CMakePresets.json
cmake/Step4/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step4/Tutorial/: CMakeLists.txt
cmake/Step5/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  MathFunctions.h
cmake/Step5/MathFunctions/MathLogger/: CMakeLists.txt
cmake/Step5/Tutorial/: Tutorial.cxx
cmake/Step6/: CMakeLists.txt
cmake/Step6/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step7/: CMakeLists.txt
cmake/Step7/.qtcreator/qtc-cmake-presets-aZsLUAWj/tutorial/: CMakeLists.txt
cmake/Step7/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cmake/Step7/MathFunctions/MakeTable/: CMakeLists.txt
cmake/Step9/: CMakeLists.txt
cmake/Step9/cmake/: TutorialConfig.cmake
cmake/Step9/install/lib/cmake/Tutorial/: TutorialTargets.cmake
cmake/Step9/install/lib64/cmake/Tutorial/: TutorialTargets-debug.cmake
